Fixed lecture notes typo

--- a/notes/Lecture_14_Notes_Ganesh.tex
+++ b/notes/Lecture_14_Notes_Ganesh.tex
@@ -25,9 +25,9 @@
 % --------------------------------------------------------------
 %
 % --------------------------------------------------------------
-\title{HW3 - Selected Solutions}
+\title{STA 250 Lecture 14 -- EM Module Lecture 03}
 
-\date{}
+\date{Monday, November 18th}
 
 \maketitle
 
